validation and pagination draft
